--- a/karta/cards.html
+++ b/karta/cards.html
@@ -152,6 +152,9 @@
                     </div>
                     <button class="btn">zamów teraz</button>
                 </div> -->
+                <a class="aa" href="logowanie.php">WYLOGUJ_SIE</a>
+                <a class="aa" href="https://github.com/3ti-2020/crud-wiele-do-wielu-rafal-bakowski">MÓJ_GITHUB</a>
+                <a class="aa" href="../index.php">POWRÓT</a>
         </section>
         
         
