--- a/karta/cards.html
+++ b/karta/cards.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CARDS CSS</title>
+    <title>CARDS_CSS</title>
     <link rel="stylesheet" href="cards.css">
 </head>
 <body class="container">
